--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,6 +14,9 @@ jobs:
       fail-fast: false
       matrix:
         backend-service: ${{ [] || [null]}}
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
 
   dependabot-auto-approve:
     needs: [empty-matrix]
