--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,7 +28,7 @@ jobs:
     name: Run empty matrix job
     runs-on: ubuntu-latest
     needs: [get-array]
-    if: needs.get-array.outputs.value
+    if: ${{ needs.get-array.outputs.value[0] }}
     strategy:
       fail-fast: false
       matrix:
