--- a/.github/workflows/test-empty-matrix.yaml
+++ b/.github/workflows/test-empty-matrix.yaml
@@ -12,27 +12,25 @@ jobs:
   get-array:
     runs-on: ubuntu-latest
     outputs:
-      value: ${{ steps.get-array.outputs.value }}
+      values: ${{ steps.get-array.outputs.values }}
     steps:
-    
-      - name: Check out code
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Get array
         id: get-array
-        uses: ./.github/actions/return-empty-array
+        shell: bash
+        run: |
+          echo "::set-output name=values::[]"
         
-  empty-matrix:
-    name: Run empty matrix job
+        
+  matrix-job:
+    name: Run matrix job
     runs-on: ubuntu-latest
     needs: [get-array]
-    if: ${{ needs.get-array.outputs.value[0] }}
+    if: ${{ fromJson(needs.get-array.outputs.values)[0] != null }}
     strategy:
       fail-fast: false
       matrix:
-        value: ${{ fromJson(needs.get-array.outputs.value) }}
+        value: ${{ fromJson(needs.get-array.outputs.values) }}
     steps:
       - shell: bash
         run: |
@@ -40,7 +38,7 @@ jobs:
 
 
   dependabot-auto-approve:
-    needs: [empty-matrix]
+    needs: [matrix-job]
     if: always()
     runs-on: ubuntu-latest
     permissions:
