--- a/.github/workflows/test-non-empty-matrix.yaml
+++ b/.github/workflows/test-non-empty-matrix.yaml
@@ -48,3 +48,13 @@ jobs:
       # if: github.actor == 'dependabot[bot]'
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        
+        
+  finish:
+    name: Finish
+    runs-on: ubuntu-latest
+    needs: [dependabot-auto-approve]
+    steps:
+      - shell: bash
+        run: |
+          echo "Finished"
